--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
     "lodash": "^4.17.15",
+    "particles.js": "^2.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
